--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Your Name. Designed with care.</p>
+        <p>&copy; 2025 sudharsan. Designed with care.</p>
     </footer>
 </body>
 </html>
