--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             color: #333;
             line-height: 1.6;
             padding: 20px;
-            overflow: hidden;
+            overflow-x: hidden;
         }
 
         .video-background {
@@ -42,6 +42,8 @@
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
+            z-index: 1;
         }
 
         .header {
@@ -110,12 +112,22 @@
         footer a:hover {
             text-decoration: underline;
         }
+
+        @media screen and (max-width: 768px) {
+            body {
+                padding: 10px;
+            }
+
+            .container {
+                padding: 15px;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="video-background">
         <video autoplay loop muted>
-            <source src="vidd.mp4" type="video/mp4">
+            <source src="your-video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
