--- a/index.html
+++ b/index.html
@@ -13,37 +13,19 @@
 
         body {
             font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #4facfe, #00f2fe);
             color: #333;
             line-height: 1.6;
             padding: 20px;
-            overflow-x: hidden;
-        }
-
-        .video-background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            overflow: hidden;
-        }
-
-        .video-background video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
         }
 
         .container {
             max-width: 900px;
             margin: 0 auto;
-            background: rgba(255, 255, 255, 0.9);
+            background: #fff;
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            position: relative;
-            z-index: 1;
         }
 
         .header {
@@ -112,26 +94,9 @@
         footer a:hover {
             text-decoration: underline;
         }
-
-        @media screen and (max-width: 768px) {
-            body {
-                padding: 10px;
-            }
-
-            .container {
-                padding: 15px;
-            }
-        }
     </style>
 </head>
 <body>
-    <div class="video-background">
-        <video autoplay loop muted>
-            <source src="your-video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-
     <div class="container">
         <div class="header">
             <img src="img33.jpg" alt="Your Photo">
@@ -157,9 +122,9 @@
 
         <div class="section">
             <h2>Contact</h2>
-            <p>Email: <a href="mailto:sudharsans573@gmail.com">sudharsans573@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/sudharsan-s-385ba9341?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">https://www.linkedin.com/in/sudharsan-s-385ba9341</a></p>
-            <p>Contact number: <a href="tel:9150945342" target="_blank">9150945342</a></p>
+            <p>Email: <a href="sudharsans573@gmail.com">sudharsans573@gmail.com </a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/sudharsan-s-385ba9341?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app " target="_blank">https://www.linkedin.com/in/sudharsan-s-385ba9341?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app </a></p>
+            <p>Contact number: <a href="9150945342" target="_blank">9150945342</a></p>
         </div>
     </div>
 
